# vouw

./: 2.2.txt  CMakeLists.txt  README.md  configure  make_naive_cluster.sh  make_naive_cluster3.2.sh  make_naive_cluster3.sh
paper/: vouw-gnuplottex-fig1.gnuplot  vouw-gnuplottex-fig2.gnuplot  vouw-gnuplottex-fig3.gnuplot  vouw-gnuplottex-fig4.gnuplot  vouw.aux
src/: cli.c  cli.h  encoded_rfca.c  encoded_rfca.h  list_sort.c  list_sort.h  main.c  module.c  module.h  module_batch.c  module_batch.h  module_encode.c  module_encode.h  module_print.c  module_print.h  pattern.c  pattern.h  region.c  region.h  rfca.c  rfca.h  rfca_buffer.c  rfca_buffer.h  ttable.c  ttable.h  vouw.c  vouw.h
